--- a/app/views/pages/sustainability.html.erb
+++ b/app/views/pages/sustainability.html.erb
@@ -19,13 +19,105 @@
       <div class="col-md-9">
         <div class="content">
           <h1><span>Sustainability</span></h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sit amet semper diam, quis commodo eros. Nam mi est, faucibus et varius tempus, tincidunt in dolor. Fusce sodales, lectus vel molestie rhoncus, elit massa aliquam lacus, porta aliquam sem tortor vitae nisl. Pellentesque aliquam condimentum nunc ut sollicitudin. Ut urna nunc, consectetur vitae viverra at, tempus eu tortor. Duis sed interdum nisl. Vivamus ac metus in arcu vestibulum pretium. Fusce ac rutrum lacus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <p>From our building structure to our playgrounds to our lunch programs, we are an environmentally progressive school, set in Maine's most urban city.</p>
+          <p>In our intiative to help children realize their potential as conscious, educated and compassionate thinkers and leaders, environmental responsibility and awareness is woven throughout everything we do. Here are just some of the ways we make these issues a part of the EECS experience:
 
-          <p>Sed porta ac ipsum ut mollis. Integer id vestibulum dui, at dapibus orci. Nunc adipiscing, orci sit amet ultricies sagittis, arcu orci feugiat lorem, nec feugiat magna erat id lectus. Cras tristique eu sapien ut aliquam. Cras pharetra nisl sapien, ut tincidunt nunc feugiat at. Donec massa nisl, tincidunt eu nulla quis, tristique facilisis nibh. Praesent viverra tempor lectus et consectetur.</p>
+          <ul>
+            <li><a href="#architecure">The architecture of our building</a></li>
+            <li><a href="#architecure">Our community garden</a></li>
+            <li><a href="#architecure">Solar Energy</a></li>
+            <li><a href="#architecure">Farm-fresh food</a></li>
+            <li><a href="#architecure">Rise and Shine programs</a></li>
+          </ul>
+          <h2><span><a name='architecture'></a>Architecture</span></h2>
+          <h5><%= link_to 'Built for sustainbility from the ground up by Stephen Blatt Architects', 'http://www.sbarchitects.com/eastEnd.html#' %></h5>
+          <p>For Portland’s first new school in over 30 years, the educational program specified three 150- student, two-story “houses” in which students remain for grades K-5. The plans included meeting rooms, large gym, cafeteria, and a branch public library for community use.</p>
 
-          <p>Pellentesque imperdiet diam ut augue vulputate eleifend vitae id lorem. Aliquam a congue lectus, nec sollicitudin risus. Vivamus id nisi tincidunt, tempus orci sed, vestibulum eros. Nulla facilisi. Nam eu ornare libero. Suspendisse adipiscing neque et egestas bibendum. Morbi vulputate non tellus eu dapibus. Maecenas tempor scelerisque pulvinar. Donec dictum pulvinar rhoncus. Sed ornare quis orci eget viverra. Sed tincidunt id turpis interdum congue. Nam quis scelerisque lacus. Suspendisse id metus nibh.</p>
+          <p>The entrance and classroom wings face south and provide protected outdoor play areas. The spine connecting the classroom wings provides access to special program spaces, with windows opening over a vegetated roof. The facets of the community wing step around the hill providing extraordinary views; massing hugs the site, reinforcing the topography.</p>
 
-          <p>Vivamus rhoncus felis non lorem adipiscing, ac faucibus diam mattis. Vestibulum malesuada, sem vitae placerat consequat, est odio dapibus est, ac rutrum tortor justo eget sapien. Etiam vehicula mattis aliquet. Sed dictum hendrerit blandit. Suspendisse justo lacus, ultricies quis aliquam eu, convallis vel neque. Integer lobortis eu dolor a molestie. Nulla rhoncus justo vel risus dictum adipiscing. Donec ornare dictum augue, sed bibendum enim mattis a. Donec at metus purus. Duis pellentesque feugiat odio sed vehicula. Pellentesque egestas ac nisi id auctor. Cras aliquet, ligula a lobortis tristique, sapien libero ornare libero, et viverra tellus nisi non ligula. Nullam eleifend lacus sem, sit amet rutrum elit congue vitae. Praesent vehicula viverra odio in aliquet. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent interdum nisl et magna dignissim tincidunt.</p>
+          <p>The interior presents a combination of vibrant colors; distinctive floor patterns are color coded by wing. Ground-faced concrete block wainscoting provides a handsome, low -maintenance surface. The exterior’s masonry stripes, wave-like window patterns, and ever-changing silver metallic siding together activate the amazing site.</p>
+
+          <p>Certified LEED Silver.</p>
+
+          <h4>Photos from the Architects</h4>
+
+          <div class="row">
+            <div class="col-lg-9 col-lg-9">
+              <div class="info-thumbnail-link">
+                <div class="thumbnail info-thumbnail background-clouds color-text">
+                  <div class="service">
+                    <div class="service-name"><h3>School Front</h3><p>A warm, welcoming entrance.</p></div>
+                  </div>
+                  <%= image_tag("eecs_1.jpg", class: "round") %>
+                </div>
+              </div>
+
+              <div class="info-thumbnail-link">
+                <div class="thumbnail info-thumbnail background-clouds color-text">
+                  <div class="service">
+                    <div class="service-name"><h3>The Houses</h3><p>A side view of the three 2-story houses.</p></div>
+                  </div>
+                  <%= image_tag("eecs_2.jpg", class: "round") %>
+                </div>
+              </div>
+
+              <div class="info-thumbnail-link">
+                <div class="thumbnail info-thumbnail background-clouds color-text">
+                  <div class="service">
+                    <div class="service-name"><h3>Front Lobby</h3><p>Light pours into the front entrance, welcoming students, teachers and parents each day.</p></div>
+                  </div>
+                  <%= image_tag("eecs_3.jpg", class: "round") %>
+                </div>
+              </div>
+
+              <div class="info-thumbnail-link">
+                <div class="thumbnail info-thumbnail background-clouds color-text">
+                  <div class="service">
+                    <div class="service-name"><h3>Main Hall</h3><p>Colorful, clean hall that leads students from the main lobby to a gymansium, lunch room, and rec rooms.</p></div>
+                  </div>
+                  <%= image_tag("eecs_4.jpg", class: "round") %>
+                </div>
+              </div>
+
+              <div class="info-thumbnail-link">
+                <div class="thumbnail info-thumbnail background-clouds color-text">
+                  <div class="service">
+                    <div class="service-name"><h3>Cafeteria</h3><p>These beautiful, wide windows provide students with a sunlit room for dining.</p></div>
+                  </div>
+                  <%= image_tag("eecs_5.jpg", class: "round") %>
+                </div>
+              </div>
+
+              <div class="info-thumbnail-link">
+                <div class="thumbnail info-thumbnail background-clouds color-text">
+                  <div class="service">
+                    <div class="service-name"><h3>Classroom</h3><p>There is no shortage of natural light, especially in our classrooms.</p></div>
+                  </div>
+                  <%= image_tag("eecs_6.jpg", class: "round") %>
+                </div>
+              </div>
+
+              <div class="info-thumbnail-link">
+                <div class="thumbnail info-thumbnail background-clouds color-text">
+                  <div class="service">
+                    <div class="service-name"><h3>Back View</h3><p>Conveniently placed exits, close to each student's 'house', allow students and staff quick and easy access to the state of the art playground.</p></div>
+                  </div>
+                  <%= image_tag("eecs_7.jpg", class: "round") %>
+                </div>
+              </div>
+
+              <div class="info-thumbnail-link">
+                <div class="thumbnail info-thumbnail background-clouds color-text">
+                  <div class="service">
+                    <div class="service-name"><h3>Cafeteria Wing</h3><p>The well manicured hills and trees give students and staff a pleasant vista while they lunch together.</p></div>
+                  </div>
+                  <%= image_tag("eecs_8.jpg", class: "round") %>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <p>Photos: Dan Gair/Blind Dog Photo</p>
         </div>
       </div>
     </div>
