--- a/app/views/pages/staff.html.erb
+++ b/app/views/pages/staff.html.erb
@@ -19,13 +19,7 @@
       <div class="col-md-9">
         <div class="content">
           <h1><span>Our Staff</span></h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sit amet semper diam, quis commodo eros. Nam mi est, faucibus et varius tempus, tincidunt in dolor. Fusce sodales, lectus vel molestie rhoncus, elit massa aliquam lacus, porta aliquam sem tortor vitae nisl. Pellentesque aliquam condimentum nunc ut sollicitudin. Ut urna nunc, consectetur vitae viverra at, tempus eu tortor. Duis sed interdum nisl. Vivamus ac metus in arcu vestibulum pretium. Fusce ac rutrum lacus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-
-          <p>Sed porta ac ipsum ut mollis. Integer id vestibulum dui, at dapibus orci. Nunc adipiscing, orci sit amet ultricies sagittis, arcu orci feugiat lorem, nec feugiat magna erat id lectus. Cras tristique eu sapien ut aliquam. Cras pharetra nisl sapien, ut tincidunt nunc feugiat at. Donec massa nisl, tincidunt eu nulla quis, tristique facilisis nibh. Praesent viverra tempor lectus et consectetur.</p>
-
-          <p>Pellentesque imperdiet diam ut augue vulputate eleifend vitae id lorem. Aliquam a congue lectus, nec sollicitudin risus. Vivamus id nisi tincidunt, tempus orci sed, vestibulum eros. Nulla facilisi. Nam eu ornare libero. Suspendisse adipiscing neque et egestas bibendum. Morbi vulputate non tellus eu dapibus. Maecenas tempor scelerisque pulvinar. Donec dictum pulvinar rhoncus. Sed ornare quis orci eget viverra. Sed tincidunt id turpis interdum congue. Nam quis scelerisque lacus. Suspendisse id metus nibh.</p>
-
-          <p>Vivamus rhoncus felis non lorem adipiscing, ac faucibus diam mattis. Vestibulum malesuada, sem vitae placerat consequat, est odio dapibus est, ac rutrum tortor justo eget sapien. Etiam vehicula mattis aliquet. Sed dictum hendrerit blandit. Suspendisse justo lacus, ultricies quis aliquam eu, convallis vel neque. Integer lobortis eu dolor a molestie. Nulla rhoncus justo vel risus dictum adipiscing. Donec ornare dictum augue, sed bibendum enim mattis a. Donec at metus purus. Duis pellentesque feugiat odio sed vehicula. Pellentesque egestas ac nisi id auctor. Cras aliquet, ligula a lobortis tristique, sapien libero ornare libero, et viverra tellus nisi non ligula. Nullam eleifend lacus sem, sit amet rutrum elit congue vitae. Praesent vehicula viverra odio in aliquet. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent interdum nisl et magna dignissim tincidunt.</p>
+          <%= render partial: 'staff_members' %>
         </div>
       </div>
     </div>
