more for sustainability page

--- a/app/views/pages/sustainability.html.erb
+++ b/app/views/pages/sustainability.html.erb
@@ -24,12 +24,12 @@
 
           <ul>
             <li><a href="#architecure">The architecture of our building</a></li>
-            <li><a href="#architecure">Our community garden</a></li>
-            <li><a href="#architecure">Solar Energy</a></li>
-            <li><a href="#architecure">Farm-fresh food</a></li>
-            <li><a href="#architecure">Rise and Shine programs</a></li>
+            <li><a href="#garden">Our community garden</a></li>
+            <li><a href="#solar">Solar Energy</a></li>
+            <li><a href="#farm-lunch">Farm-fresh food</a></li>
+            <li>Add more here</li>
           </ul>
-          <h2><span><a name='architecture'></a>Architecture</span></h2>
+          <h3><a name='architecture'></a>Architecture</h3>
           <h5><%= link_to 'Built for sustainbility from the ground up by Stephen Blatt Architects', 'http://www.sbarchitects.com/eastEnd.html#' %></h5>
           <p>For Portland’s first new school in over 30 years, the educational program specified three 150- student, two-story “houses” in which students remain for grades K-5. The plans included meeting rooms, large gym, cafeteria, and a branch public library for community use.</p>
 
@@ -118,6 +118,54 @@
           </div>
 
           <p>Photos: Dan Gair/Blind Dog Photo</p>
+
+          <h3><span><a name='garden'></a>Community Garden</span></h3>
+          <p>Here is some filler text. Replace with text about our garden. More pictures of students working in garden. Other angles of garden. How gardening helps students learn about agriculture, community, the value of growing food and enjoying food together. </p>
+
+          <div class="row">
+            <div class="col-lg-9 col-lg-9">
+              <div class="info-thumbnail-link">
+                <div class="thumbnail info-thumbnail background-clouds color-text">
+                  <div class="service">
+                    <div class="service-name"><h3>Community Garden</h3><p>Overlooking beautifil Casco Bay, students, staff and volunteers work in the community garden.</p></div>
+                  </div>
+                  <%= image_tag("garden.jpg", class: "round") %>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <h3><span><a name='solar'></a>Solar Power</span></h3>
+          <p>Here is some filler text. Replace with text about our the solar panels. Link back to the company who installed them. Credit them for the picture. Talk about solar energy and how it's used at the school. Include some good stats. </p>
+
+          <div class="row">
+            <div class="col-lg-9 col-lg-9">
+              <div class="info-thumbnail-link">
+                <div class="thumbnail info-thumbnail background-clouds color-text">
+                  <div class="service">
+                    <div class="service-name"><h3>The Energy of the Future</h3><p>The roof is covered in solar panels.</p></div>
+                  </div>
+                  <%= image_tag("solar.jpg", class: "round") %>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <h3><span><a name='farm-lunch'></a>Maine Harvest Lunch Program</span></h3>
+          <p>Here is some filler text. Replace with text about our the Maine Harvest Lunch program. Any news articles on it we could link to? Talk about importance of supporting local farms, eating healthy, fresh foods. Get some photos of students enjoying healthy lunches, veggies, etc. </p>
+
+          <div class="row">
+            <div class="col-lg-9 col-lg-9">
+              <div class="info-thumbnail-link">
+                <div class="thumbnail info-thumbnail background-clouds color-text">
+                  <div class="service">
+                    <div class="service-name"><h3>Farm Fresh Food</h3><p>Supporting our growing students with healthy, locally sourced foods.</p></div>
+                  </div>
+                  <%# image_tag("solar.jpg", class: "round") %>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
