about page info

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -19,13 +19,22 @@
       <div class="col-md-9">
         <div class="content">
           <h1><span>About EECS</span></h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sit amet semper diam, quis commodo eros. Nam mi est, faucibus et varius tempus, tincidunt in dolor. Fusce sodales, lectus vel molestie rhoncus, elit massa aliquam lacus, porta aliquam sem tortor vitae nisl. Pellentesque aliquam condimentum nunc ut sollicitudin. Ut urna nunc, consectetur vitae viverra at, tempus eu tortor. Duis sed interdum nisl. Vivamus ac metus in arcu vestibulum pretium. Fusce ac rutrum lacus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <p>East End Community School is an elementary school serving Portland's diverse and growing East End neighborhood, located on the far east end of the Portland peninsula. The school is positioned on a hill overlooking beautiful Casco Bay, offering students and staff views of a picturesque ocean and the prominent Portland skyline.</p>
 
-          <p>Sed porta ac ipsum ut mollis. Integer id vestibulum dui, at dapibus orci. Nunc adipiscing, orci sit amet ultricies sagittis, arcu orci feugiat lorem, nec feugiat magna erat id lectus. Cras tristique eu sapien ut aliquam. Cras pharetra nisl sapien, ut tincidunt nunc feugiat at. Donec massa nisl, tincidunt eu nulla quis, tristique facilisis nibh. Praesent viverra tempor lectus et consectetur.</p>
+          <p>The school was constructed in 2006 and is home to more than 400 students in grades K-5. With modern eductional needs in mind, the school was designed from the ground up to be a warm, welcoming and enriching environment for learning and teaching. Large windows allow natural light to pour in classrooms, solar panels on the roof provide the school with electricity, and three two-story "houses" provide community-like learning spaces for children based on their ages and needs.</p>
 
-          <p>Pellentesque imperdiet diam ut augue vulputate eleifend vitae id lorem. Aliquam a congue lectus, nec sollicitudin risus. Vivamus id nisi tincidunt, tempus orci sed, vestibulum eros. Nulla facilisi. Nam eu ornare libero. Suspendisse adipiscing neque et egestas bibendum. Morbi vulputate non tellus eu dapibus. Maecenas tempor scelerisque pulvinar. Donec dictum pulvinar rhoncus. Sed ornare quis orci eget viverra. Sed tincidunt id turpis interdum congue. Nam quis scelerisque lacus. Suspendisse id metus nibh.</p>
+          <p>Our academic program uses a workshop model that allows students to move through skill development at individual levels, while helping them to become successful, lifelong learners. Our approach utilizes the three R's: Relationships, Relevance and Rigor:</p>
 
-          <p>Vivamus rhoncus felis non lorem adipiscing, ac faucibus diam mattis. Vestibulum malesuada, sem vitae placerat consequat, est odio dapibus est, ac rutrum tortor justo eget sapien. Etiam vehicula mattis aliquet. Sed dictum hendrerit blandit. Suspendisse justo lacus, ultricies quis aliquam eu, convallis vel neque. Integer lobortis eu dolor a molestie. Nulla rhoncus justo vel risus dictum adipiscing. Donec ornare dictum augue, sed bibendum enim mattis a. Donec at metus purus. Duis pellentesque feugiat odio sed vehicula. Pellentesque egestas ac nisi id auctor. Cras aliquet, ligula a lobortis tristique, sapien libero ornare libero, et viverra tellus nisi non ligula. Nullam eleifend lacus sem, sit amet rutrum elit congue vitae. Praesent vehicula viverra odio in aliquet. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent interdum nisl et magna dignissim tincidunt.</p>
+          <h4>Relationships</h4>
+          <p>Relationships blurb here</p>
+
+          <h4>Relevance</h4>
+          <p>Relevance blurb here</p>
+
+          <h4>Rigor</h4>
+          <p>Rigor blurb here</p>
+
+          <p>You can take a look at our <%= link_to "2012-2013 Success Plan", "http://www2.portlandschools.org/sites/default/files/School%20Success%20Plan.PDF" %> for more information on our strategy for academic excellence, and to learn about the great strides we have made over the last two years.</p>
         </div>
       </div>
     </div>
