more about page info

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -21,7 +21,7 @@
           <h1><span>About EECS</span></h1>
           <p>East End Community School is an elementary school serving Portland's diverse and growing East End neighborhood, located on the far east end of the Portland peninsula. The school is positioned on a hill overlooking beautiful Casco Bay, offering students and staff views of a picturesque ocean and the prominent Portland skyline.</p>
 
-          <p>The school was constructed in 2006 and is home to more than 400 students in grades K-5. With modern eductional needs in mind, the school was designed from the ground up to be a warm, welcoming and enriching environment for learning and teaching. Large windows allow natural light to pour in classrooms, solar panels on the roof provide the school with electricity, and three two-story "houses" provide community-like learning spaces for children based on their ages and needs.</p>
+          <p>The school was constructed in 2006 and is home to more than 400 students in grades K-5. With modern eductional needs in mind, the school was designed from the ground up to be a warm, welcoming and enriching environment for learning and teaching. Large windows allow natural light to pour in classrooms, solar panels on the roof provide the school with electricity, and three two-story "houses" provide community-like learning spaces for children based on their ages and needs.</p> 
 
           <p>Our academic program uses a workshop model that allows students to move through skill development at individual levels, while helping them to become successful, lifelong learners. Our approach utilizes the three R's: Relationships, Relevance and Rigor:</p>
 
@@ -34,7 +34,10 @@
           <h4>Rigor</h4>
           <p>Rigor blurb here</p>
 
-          <p>You can take a look at our <%= link_to "2012-2013 Success Plan", "http://www2.portlandschools.org/sites/default/files/School%20Success%20Plan.PDF" %> for more information on our strategy for academic excellence, and to learn about the great strides we have made over the last two years.</p>
+          <h4>Learn More</h4>
+          <p>Review our <%= link_to "2012-2013 Success Plan", "http://www2.portlandschools.org/sites/default/files/School%20Success%20Plan.PDF" %> for more information on our strategy for academic excellence, and to learn about the great strides we have made over the last two years.</p>
+
+          <p>You can learn about the architectural approach to the design of EECS, as well as browse photos from the architect, learn about our community gardening initiatives, and other ways in which we focus on environmental sustainability <%= link_to "here.", about_sustainability_path %> </p>
         </div>
       </div>
     </div>
