--- a/app/views/pages/sustainability.html.erb
+++ b/app/views/pages/sustainability.html.erb
@@ -26,8 +26,8 @@
             <li><a href="#architecure">The architecture of our building</a></li>
             <li><a href="#garden">Our community garden</a></li>
             <li><a href="#solar">Solar Energy</a></li>
+            <li><a href="#green-team">The Green Team</a></li>
             <li><a href="#farm-lunch">Farm-fresh food</a></li>
-            <li>Add more here</li>
           </ul>
           <h3><a name='architecture'></a>Architecture</h3>
           <h5><%= link_to 'Built for sustainbility from the ground up by Stephen Blatt Architects', 'http://www.sbarchitects.com/eastEnd.html#' %></h5>
@@ -37,7 +37,9 @@
 
           <p>The interior presents a combination of vibrant colors; distinctive floor patterns are color coded by wing. Ground-faced concrete block wainscoting provides a handsome, low -maintenance surface. The exterior’s masonry stripes, wave-like window patterns, and ever-changing silver metallic siding together activate the amazing site.</p>
 
-          <p>Certified LEED Silver.</p>
+          <p>The green roof at EECS prevents water run off. Plants on the roof absorb rain water and keep it from running into the street and picking up street contaminates that end up in Back Cove or Casco Bay. The black roof traps the heat for energy efficiency.</p>
+
+          <p>EECS is Certified LEED Silver.</p>
 
           <h4>Photos from the Architects</h4>
 
@@ -136,7 +138,9 @@
           </div>
 
           <h3><span><a name='solar'></a>Solar Power</span></h3>
-          <p>Here is some filler text. Replace with text about our the solar panels. Link back to the company who installed them. Credit them for the picture. Talk about solar energy and how it's used at the school. Include some good stats. </p>
+          <p>There are 18 solar panels on the roof at East End Community School that were installed in 2006. They are 150 watt each and produce about 3 KW electricity a day. This is equivalent to what powers a household for a day.</p>
+
+          <p>The solar panels were donated by Alfred Padula, the former Chairman of the <%= link_to "Green Campus Consortium of Maine.", "http://www.megreencampus.com" %> East End Community School was one of the first schools in Maine to have solar panels for energy efficiency.</p>
 
           <div class="row">
             <div class="col-lg-9 col-lg-9">
@@ -146,6 +150,22 @@
                     <div class="service-name"><h3>The Energy of the Future</h3><p>The roof is covered in solar panels.</p></div>
                   </div>
                   <%= image_tag("solar.jpg", class: "round") %>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <h3><span><a name='green-team'></a>EECS Green Team</span></h3>
+          <p>The Green Team at East End Community School audits the classrooms each week to check for proper recycling of materials. The classroom with the most materials properly recycled receives the prestigious "golden bucket" for that week.</p>
+
+          <div class="row">
+            <div class="col-lg-9 col-lg-9">
+              <div class="info-thumbnail-link">
+                <div class="thumbnail info-thumbnail background-clouds color-text">
+                  <div class="service">
+                    <div class="service-name"><h3>The Green Team</h3><p>The "Golden Bucket" is a coveted award among the students for their recycling efforts.</p></div>
+                  </div>
+                  <%= image_tag("green_team.jpg", class: "round") %>
                 </div>
               </div>
             </div>
