--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -23,21 +23,22 @@
 
           <p>The school was constructed in 2006 and is home to more than 400 students in grades K-5. With modern eductional needs in mind, the school was designed from the ground up to be a warm, welcoming and enriching environment for learning and teaching. Large windows allow natural light to pour in classrooms, solar panels on the roof provide the school with electricity, and three two-story "houses" provide community-like learning spaces for children based on their ages and needs.</p> 
 
-          <p>Our academic program uses a workshop model that allows students to move through skill development at individual levels, while helping them to become successful, lifelong learners. Our approach utilizes the three R's: Relationships, Relevance and Rigor:</p>
+          <p>Our academic program uses a workshop model that allows students to move through skill development at individual levels, while helping them to become successful, lifelong learners. Our approach utilizes the <%= link_to "Rigor/Relevance Framework:", "http://www.leadered.com/our-philosophy/rigor-relevance-framework.php" %></p>
 
-          <h4>Relationships</h4>
-          <p>Relationships blurb here</p>
+          <h4>Rigor, Relevance, Relationships</h4>
+          <p>The Rigor/Relevance framework was developed by staff of the <%= link_to "International Center for Leadership in Education", "http://www.leadered.com/" %> to help teachers understand the complex ways students think and give them the tools to develop academic programs based on the ways in which knowledge is acquired, assimilated, and used.</p>
 
-          <h4>Relevance</h4>
-          <p>Relevance blurb here</p>
-
-          <h4>Rigor</h4>
-          <p>Rigor blurb here</p>
+          <p>Teachers at EECS use this framework to develop their instructional strategies, using  tools to meet students where they are individually and help them grow into creative thinkers and problem solvers by: </p>
+          <ol>
+            <li>Ensuring the concepts are presented as relevant to the students. </li>
+            <li>Adding rigor to challenge students when necessary.</li>
+            <li>Focusing on building relationships between staff, students, and the outside world.</li>
+          </ol>
 
           <h4>Learn More</h4>
           <p>Review our <%= link_to "2012-2013 Success Plan", "http://www2.portlandschools.org/sites/default/files/School%20Success%20Plan.PDF" %> for more information on our strategy for academic excellence, and to learn about the great strides we have made over the last two years.</p>
 
-          <p>You can learn about the architectural approach to the design of EECS, as well as browse photos from the architect, learn about our community gardening initiatives, and other ways in which we focus on environmental sustainability <%= link_to "here.", about_sustainability_path %> </p>
+          <p>Additionally, you can learn about the architectural approach to the design of EECS, as well as browse photos from the architect, learn about our community gardening initiatives, and other ways in which we focus on environmental sustainability <%= link_to "here.", about_sustainability_path %> </p>
         </div>
       </div>
     </div>
