--- a/app/views/pages/academics.html.erb
+++ b/app/views/pages/academics.html.erb
@@ -19,13 +19,21 @@
       <div class="col-md-9">
         <div class="content">
           <h1><span>Academics</span></h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sit amet semper diam, quis commodo eros. Nam mi est, faucibus et varius tempus, tincidunt in dolor. Fusce sodales, lectus vel molestie rhoncus, elit massa aliquam lacus, porta aliquam sem tortor vitae nisl. Pellentesque aliquam condimentum nunc ut sollicitudin. Ut urna nunc, consectetur vitae viverra at, tempus eu tortor. Duis sed interdum nisl. Vivamus ac metus in arcu vestibulum pretium. Fusce ac rutrum lacus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <p>At EECS we are focused on creating students who are engaged in learning and helping them develop strong foundational skills in reading, writing, and mathematics that will allow them to apply their knowledge and skills and to think more deeply with rigor through relevant learning tasks.</p>
 
-          <p>Sed porta ac ipsum ut mollis. Integer id vestibulum dui, at dapibus orci. Nunc adipiscing, orci sit amet ultricies sagittis, arcu orci feugiat lorem, nec feugiat magna erat id lectus. Cras tristique eu sapien ut aliquam. Cras pharetra nisl sapien, ut tincidunt nunc feugiat at. Donec massa nisl, tincidunt eu nulla quis, tristique facilisis nibh. Praesent viverra tempor lectus et consectetur.</p>
+          <p>We focus on monitoring student growth and not just student achievement. Our commitment as a school is to ensure students are growing as learners, that they are appropriately challenged, and that they learn how to apply their knowldege pragmatically. We meet each student where they are academically and strive to help them understand the value of knowlege and how to grow as learners.</p>
 
-          <p>Pellentesque imperdiet diam ut augue vulputate eleifend vitae id lorem. Aliquam a congue lectus, nec sollicitudin risus. Vivamus id nisi tincidunt, tempus orci sed, vestibulum eros. Nulla facilisi. Nam eu ornare libero. Suspendisse adipiscing neque et egestas bibendum. Morbi vulputate non tellus eu dapibus. Maecenas tempor scelerisque pulvinar. Donec dictum pulvinar rhoncus. Sed ornare quis orci eget viverra. Sed tincidunt id turpis interdum congue. Nam quis scelerisque lacus. Suspendisse id metus nibh.</p>
+          <h4>Rigor, Relevance, Relationships</h4>
+          <p>The Rigor/Relevance framework was developed by staff of the <%= link_to "International Center for Leadership in Education", "http://www.leadered.com/" %> to help teachers understand the complex ways students think and give them the tools to develop academic programs based on the ways in which knowledge is acquired, assimilated, and used.</p>
 
-          <p>Vivamus rhoncus felis non lorem adipiscing, ac faucibus diam mattis. Vestibulum malesuada, sem vitae placerat consequat, est odio dapibus est, ac rutrum tortor justo eget sapien. Etiam vehicula mattis aliquet. Sed dictum hendrerit blandit. Suspendisse justo lacus, ultricies quis aliquam eu, convallis vel neque. Integer lobortis eu dolor a molestie. Nulla rhoncus justo vel risus dictum adipiscing. Donec ornare dictum augue, sed bibendum enim mattis a. Donec at metus purus. Duis pellentesque feugiat odio sed vehicula. Pellentesque egestas ac nisi id auctor. Cras aliquet, ligula a lobortis tristique, sapien libero ornare libero, et viverra tellus nisi non ligula. Nullam eleifend lacus sem, sit amet rutrum elit congue vitae. Praesent vehicula viverra odio in aliquet. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent interdum nisl et magna dignissim tincidunt.</p>
+          <p>Teachers at EECS use this framework to develop their instructional strategies, using  tools to meet students where they are individually and help them grow into creative thinkers and problem solvers by: </p>
+          <ol>
+            <li>Ensuring the concepts are presented as relevant to the students. </li>
+            <li>Adding rigor to challenge students when necessary.</li>
+            <li>Focusing on building relationships between staff, students, and the outside world.</li>
+          </ol>
+
+          <p>Review our <%= link_to "2012-2013 Success Plan", "http://www2.portlandschools.org/sites/default/files/School%20Success%20Plan.PDF" %> for more information on our strategy for academic excellence, and to learn about the great strides we have made over the last two years.</p>
         </div>
       </div>
     </div>
