updated garden info and pics

--- a/app/views/pages/sustainability.html.erb
+++ b/app/views/pages/sustainability.html.erb
@@ -122,7 +122,13 @@
           <p>Photos: Dan Gair/Blind Dog Photo</p>
 
           <h3><span><a name='garden'></a>Community Garden</span></h3>
-          <p>Here is some filler text. Replace with text about our garden. More pictures of students working in garden. Other angles of garden. How gardening helps students learn about agriculture, community, the value of growing food and enjoying food together. </p>
+          <p>The school gardens at East End Community School provide a real learning opportunity for students as well as providing a fantastic public space with one of the most picturesque views in the neighborhood.</p>
+
+          <p>EECS’s outdoor classroom curriculum allows students to plant seeds, tend, and harvest their own food. Students then enjoy their very own vegetables including radishes, carrots, potatoes, kale, and more.  One fall there was a particularly bountiful carrot crop that was used to make carrot cake for the entire school. A new cedar garden shed was built in the garden just across from the school which is a beautiful and use addition to our campus.</p>
+
+          <p>On afternoons throughout the summer, volunteers gather to tend to the gardens. All grounds greening parties are held prior to the start of school in August to weed gardens, pick up trash, spread new wood chips, and generally spruce up our outdoor space before students returned for the start of the school year. </p>
+
+          <p>With gardening help year round from Cultivating Community, parents, teachers, community volunteers, and our dedicated School Ground Greening Liaison, EECS continues to enjoy the most scenic and greenest campus in Portland.</p>
 
           <div class="row">
             <div class="col-lg-9 col-lg-9">
@@ -132,6 +138,24 @@
                     <div class="service-name"><h3>Community Garden</h3><p>Overlooking beautifil Casco Bay, students, staff and volunteers work in the community garden.</p></div>
                   </div>
                   <%= image_tag("garden.jpg", class: "round") %>
+                </div>
+              </div>
+
+              <div class="info-thumbnail-link">
+                <div class="thumbnail info-thumbnail background-clouds color-text">
+                  <div class="service">
+                    <div class="service-name"><h3>Garden Club</h3><p>The kids work to plant yummy veggies together.</p></div>
+                  </div>
+                  <%= image_tag("GardenClubDrawing.jpg", class: "round") %>
+                </div>
+              </div>
+
+              <div class="info-thumbnail-link">
+                <div class="thumbnail info-thumbnail background-clouds color-text">
+                  <div class="service">
+                    <div class="service-name"><h3>Growing Food</h3><p>The fruits (and veggies!) of their labor.</p></div>
+                  </div>
+                  <%= image_tag("GardenClubPhoto.jpg", class: "round") %>
                 </div>
               </div>
             </div>
