--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -97,8 +97,8 @@
 <!-- Info thumbnails - START -->
 <section class="">
   <div class="container">
-    <h1 class="text-center x-large">Education + Community</h1>
-    <p class="lead text-center">At EECS we are focused on helping our students develop the appropriate academic, interpersonal, and creative problem-solving skills they need to thrive in a growing, changing world.</p>
+    <h1 class="text-center x-large">Rigor, Relevance & Relationships</h1>
+    <p class="lead text-center">At EECS we are focused on helping our students develop the appropriate academic, interpersonal, and creative problem-solving skills they need to thrive in a growing, changing world. We utilize the Rigor/Relevance framework to ensure children are continually challenged and supported in their learning.</p>
     <div class="row">
       <div class="col-sm-4 col-md-4">
         <div class="info-thumbnail-link">
@@ -112,7 +112,7 @@
           </div>
           <div class="caption bordered background-white">
             <h3>STEM</h3>
-            <p class="description">We are using the enVisionMATH program, designed from the ground up to meet Common Core State Standards using interactive and visual learning techniques. At EECS every student has access to iPads, (talk about the programming class in Rise and Shine here?) film stuff/animation, our science classes... </p>
+            <p class="description">Math and Science literacy and excellence is one of our primary initiatives at EECS. EECS students learn math, science and technology core concepts through problem-based instruction, small-group interaction and visual learning, ensuring each student has a variety of ways to engage, learn, and thrive. </p>
             <p class="buttons"><a href="#" class="btn btn-lead">Read more</a></p>
           </div>
         </div>
@@ -130,7 +130,7 @@
           </div>
           <div class="caption bordered background-white">
             <h3>Rise & Shine</h3>
-            <p class="description">Our Rise and Shine program helps students kick start their day with a lineup of enriching programs. Students take control of their learning by choosing five activities across four separate...connect to their community, leaders, etc </p>
+            <p class="description">Our Rise and Shine program helps students kick start their day with a lineup of enriching programs designed to get their minds working and their bodies moving. Students take control of their learning by selecting from programs like Zumba, puppetry, computer programming, glee, video animation, knitting, math club, and hundreds more.</p>
             <p class="buttons"><a href="#" class="btn btn-lead">Read more</a></p>
           </div>
         </div>
@@ -147,8 +147,8 @@
             </span>
           </div>
           <div class="caption bordered background-white">
-            <h3>Good Citizenship</h3>
-            <p class="description">Being good citizens, sustainability, solar power, recycling program, golden bucket, gardens, leadership programs....</p>
+            <h3>Literacy</h3>
+            <p class="description">Blurb here about our literacy programs</p>
             <p class="buttons"><a href="#" class="btn btn-lead">Read more</a></p>
           </div>
         </div>
