--- a/app/views/pages/academics.html.erb
+++ b/app/views/pages/academics.html.erb
@@ -35,6 +35,11 @@
 
           <p>Review our <%= link_to "2012-2013 Success Plan", "http://www2.portlandschools.org/sites/default/files/School%20Success%20Plan.PDF" %> for more information on our strategy for academic excellence, and to learn about the great strides we have made over the last two years.</p>
         </div>
+        <h2><span>Mathematics</span></h2>
+        <p>enVisionMATH  is designed for students in grades K–6. It helps students develop an understanding of math concepts through problem-based instruction, small-group interaction, and visual learning with a focus on reasoning and modeling.</p>
+
+        <h2><span>Literacy and Reading Comprehension</span></h2>
+        <p>Blurb here about reading programs, maybe something from the literacy girls? Forgot their names but they're awesome.</p>
       </div>
     </div>
   </div>
