--- a/app/views/pages/news.html.erb
+++ b/app/views/pages/news.html.erb
@@ -17,6 +17,31 @@
         <%= render 'about_sidebar' %>
       </div>
       <div class="col-sm-8">
+
+        <div class="col-sm-6 col-md-6">
+          <a class="info-thumbnail-link" href="http://www.huffingtonpost.com/erin-levin/thank-you-google-how-a-gl_b_5111061.html">
+          <div class="thumbnail info-thumbnail background-clouds color-text">
+            <%= image_tag("eecs-imba.jpg") %>
+            <div class="special background-peter-river color-white"><h4>East End Glee Club Saves Film Director From Burnout</h4></div>
+            <div class="caption bordered background-white">
+              <p class="description">"I walked into an event at the East End Community School and all my energy came back. Twenty of the school's most gifted singers - many native to New England but even more refugees from Rwanda, Burundi and Sudan - sang songs they learned from the African Children's Choir. This diverse group of third through fifth graders belted and grooved and smiled just like the twenty children from Choir 39 that my heart so missed." <br><%= link_to "(Read full article at Huffington Post)", "http://www.huffingtonpost.com/erin-levin/thank-you-google-how-a-gl_b_5111061.html" %></p>
+            </div>
+          </div>
+          </a>
+        </div>
+
+        <div class="col-sm-6 col-md-6">
+          <a class="info-thumbnail-link" href="http://www.pressherald.com/2012/09/06/breakfast-on-the-house_2012-09-07/">
+          <div class="thumbnail info-thumbnail background-clouds color-text">
+            <%= image_tag("breakfast.jpg") %>
+            <div class="special background-peter-river color-white"><h4>Breakfast on the House</h4></div>
+            <div class="caption bordered background-white">
+              <p class="description">"Typically, students qualify for free breakfast based on low family income. But now, all students — regardless of family income — will be offered free breakfast with low-sugar cereal, pastries, breakfast bars and juice at Reiche Elementary, East End Community, Riverton Elementary, Presumpscot Elementary and Lincoln Middle schools. The expansion isn’t costing Portland property taxpayers a dime, because the federal reimbursement for each qualifying meal exceeds the district’s cost to provide it. The district can use the extra money to provide meals to more students." <br><%= link_to "(Read full article at the Press Herald)", "http://www.pressherald.com/2012/09/06/breakfast-on-the-house_2012-09-07/" %></p>
+            </div>
+          </div>
+          </a>
+        </div>
+
         <div class="col-sm-6 col-md-6">
           <a class="info-thumbnail-link" href="http://bangordailynews.com/slideshow/the-best-voices-in-the-world-grammy-nominated-african-childrens-choir-visits-portland-school/">
           <div class="thumbnail info-thumbnail background-clouds color-text">
@@ -24,6 +49,35 @@
             <div class="special background-peter-river color-white"><h4>African Children's Choir Visits EECS</h4></div>
             <div class="caption bordered background-white">
               <p class="description">"After two performances at Merrill Auditorium, the Grammy Award-nominated African Children’s Choir rode their tour bus to the East End Community School for a pizza party with the resident glee club Monday afternoon. Local students handed out whoopie pies, skipped rope and danced with the globetrotting African choir before they took turns singing at a schoolwide assembly." <br><%= link_to "(Read full article at Bangor Daily News)", "http://bangordailynews.com/slideshow/the-best-voices-in-the-world-grammy-nominated-african-childrens-choir-visits-portland-school/" %></p>
+            </div>
+          </div>
+          </a>
+        </div>
+
+        <div class="col-sm-6 col-md-6">
+          <a class="info-thumbnail-link" href="http://www.centralmaine.com/2013/08/12/maine-program-to-give-nutritious-food-to-children/">
+          <div class="thumbnail info-thumbnail background-clouds color-text">
+            <%= image_tag("eecs-food-pantry.jpg") %>
+            <div class="special background-peter-river color-white"><h4>Maine Food Pantries Go To School</h4></div>
+            <div class="caption bordered background-white">
+              <p class="description">"Katie Wallace, a parent volunteer at Portland’s East End Community School, started bringing in snacks after the first day she volunteered in her then-kindergartner’s class when she saw about six children who didn’t have anything to eat at snack time.
+              <br><br>
+              She ran her volunteer snack program for more than two years before a grant from the Good Shepherd Food-Bank helped open a food pantry at the school to offer snacks to more students in need.
+              <br>
+              Wallace said hunger is a worse problem for younger children, who don’t know how to get food if it isn’t offered to them." <br><%= link_to "(Read full article at Kennebec Journal)", "http://www.centralmaine.com/2013/08/12/maine-program-to-give-nutritious-food-to-children/" %></p>
+            </div>
+          </div>
+          </a>
+        </div>
+
+
+        <div class="col-sm-6 col-md-6">
+          <a class="info-thumbnail-link" href="http://www.pressherald.com/interactive/2013-ten-mainers-to-be-thankful-for/">
+          <div class="thumbnail info-thumbnail background-clouds color-text">
+            <%= image_tag("eecs-food-pantry.jpg") %>
+            <div class="special background-peter-river color-white"><h4>EECS Parent Volunteer Named Among Press Herald's "Ten Mainers To Be Thankful For".</h4></div>
+            <div class="caption bordered background-white">
+              <p class="description">Katie Wallace, a long-time parent volunteer at East End Community School, started bringing in snacks after the first day she volunteered in her kindergartner’s class when she saw about six children who didn’t have anything to eat at snack time. Katie kickstarted and ran the volunteer snack program for more than two years before a grant from the Good Shepherd Food-Bank helped open a food pantry at the school to offer snacks to students in need. <br><%= link_to "(Read full article at Kennebec Journal)", "http://www.pressherald.com/interactive/2013-ten-mainers-to-be-thankful-for/" %></p>
             </div>
           </div>
           </a>
